# gf-pl-slam

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_dep.sh  clean.sh
app/: plslam_dataset.cpp  plslam_mod.cpp  plstvo_dataset.cpp  plstvo_mod.cpp
batch_script/: Run_EuRoC.py  Run_Gazebo.py  Run_KITTI.py
cmake_modules/: FindG2O.cmake
config/: dataset_params.yaml  euroc_params.yaml  gazebo_params.yaml  scene_config.ini  scene_config_indoor.ini
include/: ORBextractor.h  auxiliar.h  config.h  keyFrame.h  linespec.h  mapFeatures.h  mapHandler.h  pinholeStereoCamera.h  slamScene.h  stereoFeatures.h  stereoFrame.h  stereoFrameHandler.h  voScene.h
simu/: line_debug.py  line_detect_assessment.py  line_match_assessment.py  line_merge_assessment.py  line_stereo_assessment.py  project_error_assessment.py  simu_line_vol_assessment.py  simu_point_line_loss.py  stereo_error_assessment.py
src/: auxiliar.cpp  config.cpp  keyFrame.cpp  linespec.cpp  mapHandler.cpp  pinholeStereoCamera.cpp  simulate_line_cut.cpp  simulate_pl_loss.cpp  stereoFeatures.cpp  stereoFrame.cpp  stereoFrameHandler.cpp  test_line_matching.cpp
test/: testCut_1.cpp
